--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Welcome to Middleman
+title: Vacantes Creativas
 ---
 
 <section>
@@ -31,7 +31,7 @@ title: Welcome to Middleman
                                 </div>
                             </div>
                             <div class="py-2 flex justify-between items-center flex-col lg:flex-row">
-                                <div class="mr-4 flex">
+                                <div class="flex-column text-center md:text-left md:mr-4 md:flex-row">
                                     <span class="rounded bg-teal-200 p-1 mr-1 text-xs font-bold text-teal-800 type"><%= job.data.job_type %></span>
                                     <div class="category">
                                         <% job.data.categories.each do |f| %>
