--- a/source/shared/_footer.html.erb
+++ b/source/shared/_footer.html.erb
@@ -4,7 +4,7 @@
                 <p>Don't miss an opportunity. Follow @creativos.lat</p>
             </div>
             <div class="w-1/2 text-right">
-                <a href="#">FAQ's</a>
+                <a href="#">Blog</a>
             </div>
         </div>
     </footer>
