--- a/source/shared/_head.html.erb
+++ b/source/shared/_head.html.erb
@@ -8,4 +8,5 @@
     <title><%= current_page.data.title || "Creativos" %></title>
     <%= stylesheet_link_tag "site" %>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
