--- a/source/layouts/service_layout.erb
+++ b/source/layouts/service_layout.erb
@@ -50,7 +50,7 @@
                 <div class="rounded bg-gray-200 p-5 my-2">
                     <h3 class="font-bold text-sm">Aplicar Vacante:</h3>
                     <p class="py-1">Aplicar y más detalles en:</p>
-                    <a class="py-2 px-4 bg-blue-500 rounded text-white font-bold my-2 inline-block flex items-center justify-between text-xl" href="<%= current_page.data.apply_url %>"><%= current_page.data.apply_url %> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M7 17l9.2-9.2M17 17V7H7"/></svg></a>
+                    <a class="py-2 px-4 bg-blue-500 rounded text-white font-bold my-2 inline-block flex items-center justify-between text-xl" href="<%= current_page.data.apply_url %>?ref=http://creative.works"><%= current_page.data.apply_url %> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M7 17l9.2-9.2M17 17V7H7"/></svg></a>
                 </div>
             <% end %>
 
