--- a/source/shared/_head.html.erb
+++ b/source/shared/_head.html.erb
@@ -4,8 +4,32 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Creativos" %></title>
+    <title><%= current_page.data.title || "Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores." %></title>
+    <link rel="icon"  type="image/png"  href="http://creativos.work/images/favicon.png">
+    <!-- HTML Meta Tags -->
+    <meta name="description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.">
+    <meta itemprop="description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
+    <meta itemprop="image" content="http://creativos.work/images/fb.jpg">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="http://creativos.work">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.">
+    <meta property="og:description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
+    <meta property="og:image" content="http://creativos.work/images/fb.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.">
+    <meta name="twitter:description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
+    <meta name="twitter:image" content="http://creativos.work/images/fb.jpg">
+
+    <!-- Meta Tags Generated via http://heymeta.com -->
     <%= stylesheet_link_tag "site" %>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
