--- a/source/shared/_footer.html.erb
+++ b/source/shared/_footer.html.erb
@@ -1,7 +1,7 @@
     <footer class="py-4 border border-gray-200">
         <div class="mx-auto w-11/12 max-w-6xl flex justify-between items-center">
             <div class="w-1/2">
-                <p>Don't miss an opportunity. Follow @creativos.lat</p>
+                <p>Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores</p>
             </div>
             <div class="w-1/2 text-right">
                 <a href="#">Blog</a>
