Add twitter site

--- a/source/shared/_head.html.erb
+++ b/source/shared/_head.html.erb
@@ -18,6 +18,7 @@
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="http://creativos.work">
+    <meta property="og:site_name" content="Creativos Work">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.">
     <meta property="og:description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
@@ -28,6 +29,7 @@
     <meta name="twitter:title" content="Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.">
     <meta name="twitter:description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
     <meta name="twitter:image" content="http://creativos.work/images/fb.jpg">
+    <meta name="twitter:site" content="creativoswork">
 
     <!-- Meta Tags Generated via http://heymeta.com -->
     <%= stylesheet_link_tag "site" %>
