--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@ title: Vacantes Creativas
 
 <section class="py-5">
     <div class="mx-auto w-11/12 max-w-6xl py-4">
-        <h1 class="text-3xl font-bold">Encuentra las mejores vcantes de Trabajo para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.</h1>
+        <h1 class="text-3xl font-bold">Encuentra las mejores vacantes de Trabajo para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.</h1>
     </div>
 </section>
 
