--- a/source/shared/_head.html.erb
+++ b/source/shared/_head.html.erb
@@ -23,6 +23,8 @@
     <meta property="og:title" content="Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.">
     <meta property="og:description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
     <meta property="og:image" content="http://creativos.work/images/fb.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
