--- a/source/publicar.html.erb
+++ b/source/publicar.html.erb
@@ -1,8 +1,8 @@
 <section class="bg-gray-200 py-4 min-h-screen">
     <div class="mx-auto w-10/12 md:w-8/12 max-w-6xl py-4 mb-2">
-        <h2 class="text-xl md:text-4xl leading-tight mb-2 font-bold">Encuentra el mejor talento publicando tu vacante en nuestro sitio y llega a nuestra red de creativos.</h2>
-        <h3 class="md:text-xl"> <strong class="font-bold">worklo</strong> es un tablero de vacantes para áreas creativas en todo latinoamerica, además de listar las mejores
-        vacantes ayúdamos al talento creativo a mejorar sus habilidades y conseguir mejores oportunidades.</h3>
+        <h2 class="text-xl md:text-4xl leading-tight mb-2 font-bold">Encuentra al mejor talento publicando tu vacante en nuestro sitio y llega a nuestra red de creativos</h2>
+        <h3 class="md:text-xl"> <strong class="font-bold">creativos.work</strong> es un tablero de vacantes para áreas creativas en todo Latinoamérica, además de listar las mejores
+            vacantes ayudamos al talento creativo a mejorar sus habilidades y conseguir mejores oportunidades.</h3>
     </div>
 
 
@@ -116,13 +116,13 @@
                 </div>
 
                 <input type="submit" value="Publicar Vacante" class="w-full text-xl shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-3 px-4 rounded" >
-                <p class="py-2 text-sm text-gray-600 max-w-xl mx-auto text-center">(Una vez envies tu vacante nuestro equipo revisará que todos los datos esten en orden, este proceso puede tardar hasta 24 horas)</p>
+                <p class="py-2 text-sm text-gray-600 max-w-xl mx-auto text-center">(Una vez envies tu vacante nuestro equipo revisará que todos los datos se encuentren en orden, este proceso puede tardar hasta 24 horas)</p>
             </div>
 
             <div class="form-message text-center py-5 hidden">
                 <h3 class="text-purple-400 uppercase font-bold leading-tight text-xs">¡Solicitud Exitosa!</h3>
                 <h4 class="text-4xl font-bold">¡Vacante Recibida!</h4>
-                <p class="text-gray-700 text-xl max-w-xl mx-auto">Hemos recibido con exito tu solicitud, nuestro equipo esta revisando que todos los datos esten correctos.</p>
+                <p class="text-gray-700 text-xl max-w-xl mx-auto">Hemos recibido con éxito tu solicitud, nuestro equipo esta revisando que todos los datos están correctos.</p>
             </div>
         </form>
     </div>
