--- a/source/shared/_footer.html.erb
+++ b/source/shared/_footer.html.erb
@@ -4,7 +4,7 @@
                 <p>Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores</p>
             </div>
             <div class="w-1/2 text-right">
-                <a href="#">Blog</a>
+                <a title="Creativos Work Twitter" href="https://twitter.com/creativoswork" target="_blank">@creativoswork en Twitter</a>
             </div>
         </div>
     </footer>
