--- a/source/shared/_header.html.erb
+++ b/source/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-indigo-900 text-center py-2 lg:px-4">
-    <a href="#" class="p-2 md:bg-indigo-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex" role="alert">
+    <a href="https://twitter.com/creativoswork" title="Creativos Work Twitter" blank="_blank" class="p-2 md:bg-indigo-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex" role="alert">
         <span class="hidden md:flex rounded-full bg-indigo-500 uppercase px-2 py-1 text-xs font-bold mr-3">Nuevo</span>
         <span class="font-semibold mr-2 text-left flex-auto">Sigue nuestras vacantes en twitter.</span>
         <svg class="fill-current opacity-75 h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M12.95 10.707l.707-.707L8 4.343 6.586 5.757 10.828 10l-4.242 4.243L8 15.657l4.95-4.95z"/></svg>
@@ -7,12 +7,10 @@
 </div>
 <header class="py-4">
     <div class="mx-auto w-11/12 max-w-6xl flex justify-between items-center">
-        <% link_to '/' do %>
-            <%= image_tag "logo.svg" %>
-        <% end %>
+        <a href="/" titl="Inicio"><%= image_tag "logo.svg" %></a>
         <div>
-            <span class="bg-black text-white text-xs font-bold px-2 py-1 rounded-full mr-2  hidden lg:inline-block"> Gratis por tiempo limitado 👉 </span>
-            <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block" href="/publicar.html">Publicar Vacante</a>
+            <span class="bg-black text-white text-xs font-bold px-2 py-1 rounded-full mr-2  hidden lg:inline-block">Gratis por tiempo limitado 👉 </span>
+            <a title="Publicar Vacante" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block" href="/publicar.html">Publicar Vacante</a>
         </div>
     </div>
 </header>
