--- a/source/shared/_footer.html.erb
+++ b/source/shared/_footer.html.erb
@@ -9,6 +9,7 @@
         </div>
     </footer>
     <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/27a531f1b5f8227255e206cb2/ca8f4f8db016fe9c89ccc6c81.js");</script>
     <%= javascript_include_tag "site" %>
 </body>
 </html>
