--- a/source/layouts/service_layout.erb
+++ b/source/layouts/service_layout.erb
@@ -54,7 +54,7 @@
                 </div>
             <% end %>
 
-            <div class="p-4 mt-4 shadow-md rounded">
+            <!-- <div class="p-4 mt-4 shadow-md rounded">
                 <h3 class="font-bold">¿Quieres recibir vacantes similares a tu correo?</h3>
                 <p class="mb-2">Suscribete a nuestra lista de correos y recibe los mejores trabajos en tu zona &#x1F447;</p>
                 <div class="py-2">
@@ -64,7 +64,7 @@
                         <input class="bg-black hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit" value="Suscribirme">
                     </form>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </section>
