--- a/source/shared/_head.html.erb
+++ b/source/shared/_head.html.erb
@@ -7,14 +7,14 @@
 
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title  || "Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores." %></title>
-    <link rel="icon"  type="image/png"  href="http://creativos.work/images/favicon.png">
+    <link rel="icon"  type="image/png"  href="https://creativos.work/images/favicon.png">
     <!-- HTML Meta Tags -->
     <meta name="description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.">
     <meta itemprop="description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
-    <meta itemprop="image" content="http://creativos.work/images/fb.jpg">
+    <meta itemprop="image" content="https://creativos.work/images/fb.jpg">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="http://creativos.work">
@@ -22,7 +22,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.">
     <meta property="og:description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
-    <meta property="og:image" content="http://creativos.work/images/fb.jpg">
+    <meta property="og:image" content="https://creativos.work/images/fb.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Vacantes de Trabajo Para Diseñadores, Fotógrafos, Aquitectos e Ilustradores.">
     <meta name="twitter:description" content="Encuentra o pública las mejores vacantes de trabajo para diseñadores, fotógrafos, arquitectos e ilustradores en Latinoamérica. Las mejores Vacantes de trabajo.">
-    <meta name="twitter:image" content="http://creativos.work/images/fb.jpg">
+    <meta name="twitter:image" content="https://creativos.work/images/fb.jpg">
     <meta name="twitter:site" content="creativoswork">
 
     <!-- Meta Tags Generated via http://heymeta.com -->
