--- a/source/shared/_header.html.erb
+++ b/source/shared/_header.html.erb
@@ -7,7 +7,7 @@
 </div>
 <header class="py-4">
     <div class="mx-auto w-11/12 max-w-6xl flex justify-between items-center">
-        <a href="/" titl="Inicio"><%= image_tag "logo.svg" %></a>
+        <a href="/" titl="Inicio" class="w-32"><%= image_tag "logo.svg" %></a>
         <div>
             <span class="bg-black text-white text-xs font-bold px-2 py-1 rounded-full mr-2  hidden lg:inline-block">Gratis por tiempo limitado 👉 </span>
             <a title="Publicar Vacante" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block" href="/publicar.html">Publicar Vacante</a>
