--- a/source/layouts/service_layout.erb
+++ b/source/layouts/service_layout.erb
@@ -7,7 +7,7 @@
             <div class="w-10/12 mx-auto">
                 <div class="flex items-center justify-center mb-4">
                     <div class="flex items-center">
-                        <figure class="w-8 h-8 mr-2 bg-cover bg-no-repeat bg-center" style="background-image: url(<%= current_page.data.company_logo %>);"></figure>
+                        <figure class="w-8 h-8 mr-2 bg-cover bg-no-repeat bg-center bg-contain" style="background-image: url(<%= current_page.data.company_logo %>);"></figure>
                         <h3 class="font-bold text-gray-800 m-0 text-sm leading-none"><%= current_page.data.company %></h3>
                     </div>
                 </div>
