--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,7 +26,7 @@
                 <% blog.articles[0...5].each do |job| %>
                         <li class="border-gray-200 border rounded md:border-t-0  md:border-r-0 md:border-l-0 md:border-b-2 px-2 py-4 flex justify-between items-center w-full flex-col lg:flex-row my-2 md:my-0">
                             <div class="flex items-center text-center flex-col md:text-left md:flex-row">
-                                <figure class="w-8 h-8 mb-2 md:mb-0 md:mr-2 bg-cover bg-no-repeat bg-center" style="background-image: url(<%= job.data.company_logo %>);"></figure>
+                                <figure class="w-8 h-8 mb-2 md:mb-0 md:mr-2 bg-cover bg-no-repeat bg-center bg-contain" style="background-image: url(<%= job.data.company_logo %>);"></figure>
                                 <div>
                                     <h3 class="font-bold text-gray-800 m-0 text-sm leading-none company"><%= job.data.company %></h3>
                                     <h2 class="text-gray-800 font-bold md:text-3xl leading-none title"><%= job.title %></h2>
