--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -23,7 +23,7 @@
 
             <h3 class="my-2 font-bold text-gray-400">Vacantes</h3>
             <ul class="list my-2">
-                <% blog.articles[0...5].each do |job| %>
+                <% blog.articles.each do |job| %>
                         <li class="border-gray-200 border rounded md:border-t-0  md:border-r-0 md:border-l-0 md:border-b-2 px-2 py-4 flex justify-between items-center w-full flex-col lg:flex-row my-2 md:my-0">
                             <div class="flex items-center text-center flex-col md:text-left md:flex-row">
                                 <figure class="w-8 h-8 mb-2 md:mb-0 md:mr-2 bg-cover bg-no-repeat bg-center bg-contain" style="background-image: url(<%= job.data.company_logo %>);"></figure>
