--- a/source/shared/_head.html.erb
+++ b/source/shared/_head.html.erb
@@ -33,6 +33,9 @@
     <meta name="twitter:image" content="https://creativos.work/images/fb.jpg">
     <meta name="twitter:site" content="creativoswork">
 
+    <meta name="google-site-verification" content="T2Sl-eYWAAEPX6on9CS6JNLOG7chQedOrZLORxSYe9M" />
+
+
     <!-- Meta Tags Generated via http://heymeta.com -->
     <%= stylesheet_link_tag "site" %>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
