--- a/source/sitemap.xml.erb
+++ b/source/sitemap.xml.erb
@@ -6,6 +6,11 @@ directory_index: false
 <% pages = sitemap.resources.find_all{|p| p.source_file.match(/\.html/) && !p.data.sitemap_noindex == true } %>
 <?xml version="1.0" encoding="UTF-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+  <url>
+    <loc>https://creativos.work.com</loc>
+    <changefreq>monthly</changefreq>
+    <priority>0.5</priority>
+  </url>
 <% pages.each do |p| %>
   <url>
     <loc>https://creativos.work.com<%=p.url.gsub('/index.html','')%></loc>
